[project]
name = "latent-tools"
description = "Visualize and manipulate the latent space in ComfyUI"
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["lovely-tensors"]

[project.urls]
Repository = "https://github.com/xl0/latent-tools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "xl0"
DisplayName = "latent-tools"
Icon = ""
